bug: set html overflow y to hidden

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  /* overflow-y: scroll; */
+overflow-x: hidden;
 }
 body {
   margin: 0;
